--- a/bball/src/App.css
+++ b/bball/src/App.css
@@ -51,3 +51,24 @@ button:hover {
 .void {
   width: 30%;
 }
+
+.winLogHold {
+  margin: auto;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.winLogEntry {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  width: 20%;
+  border: 1px solid black;
+  border-radius: 3px;
+  margin: 10px;
+  padding: 10px;
+}
+
+.winLogEntry h4 {
+  line-height: 0;
+}
